--- a/Day 9 - Batch34- Introduction to Dictionary and Tuple Datatypes.ipynb
+++ b/Day 9 - Batch34- Introduction to Dictionary and Tuple Datatypes.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Day 8 - Introduction to Tuple Data Type"
+    "# Day 9 - Introduction to Tuple Data Type"
    ]
   },
   {
@@ -218,10 +218,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user={'username':'codetraning01','fanme':'code','lname':'training01','dob':'01-01-2019','pwd':54321}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'username': 'codetraning01', 'fanme': 'code', 'lname': 'training01', 'dob': '01-01-2019', 'pwd': 54321}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user['checkin']='naveencafe'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'username': 'codetraning01', 'fanme': 'code', 'lname': 'training01', 'dob': '01-01-2019', 'pwd': 54321, 'checkin': 'naveencafe'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user['pwd']=9876543210"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'username': 'codetraning01', 'fanme': 'code', 'lname': 'training01', 'dob': '01-01-2019', 'pwd': 9876543210, 'checkin': 'naveencafe'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Req: I want to know the first name of the user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "code\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user['fanme'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training01\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user['lname'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Implementation of for loop in dictionary "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Key,value ----> 2 items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# General syntax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " for tempvar1 ,tempvar2 in mainvar.items\n",
+    "    print(tempvar1)\n",
+    "    print(tempvar2)\n",
+    "    for x,y in useritems()\n",
+    "    print (x)\n",
+    "    Print (y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x,y in useritems()\n",
+    "  print (f\"key:\"{x}\")\n",
+    "  print (f\"vaue: {y}\\n\")"
+   ]
   },
   {
    "cell_type": "code",
